# AdbWinApi

./: .gitattributes  ANDROID_TOOLS_VERSION.txt  AdbWinApi.wrap.in  NOTICE  README.md  VERSION.txt  _strip_comments.py  finalize_sbom.py  generate_sbom.py  generate_wrap_file.py  initialize_build_template.py  initialize_wrap_build_template.py  release_install_native.ini  source_archive_url.py
.github/workflows/: release.yml
build_template/: meson.build  meson_options.txt
build_template/subprojects/: development.wrap
build_template/subprojects/packagefiles/diff_files/: 0001-fix-bool-to-ptr-implicit-cast-errors.patch  0002-fix-build.patch
build_template/subprojects/packagefiles/patch/: meson.build  meson_options.txt
crossfiles/: ARM64 (aarch64).ini  x86 (32bit).ini
etc/: Build and deployment process.drawio  SBOM creation process.drawio
wrap_build_template/: meson.build  meson_options.txt
