option(
  'generate_sbom',
  type: 'boolean',
  value: false,
  description: 'Generate Software Bill of Materials',
)

option(
  'sbom_name',
  type: 'string',
  description: 'Name of the SBOM JSON file.',
)

option(
  'sbom_dir',
  type: 'string',
  value: 'share/adbwinapi',
  description: 'Directory relative to prefix into which the sbom will be installed.',
)

option(
  'github_runner_ver',
  type: 'string',
  description: 'The name of the GitHub runner used (including its version). Set this if you are building a SBOM inside a GitHub Action. If unset, this action will be left out of the SBOM.',
)

option(
  'sbom_msvc_dev_cmd_ver',
  type: 'string',
  description: 'Version of ilammy/msvc-dev-cmd GitHub Action. Set this if you are building a SBOM inside a GitHub Action. If unset, this action will be left out of the SBOM.',
)

option(
  'sbom_action_gh_release',
  type: 'string',
  description: 'Version of softprops/action-gh-release GitHub Action. Set this if you are building a SBOM inside a GitHub Action. If unset, this action will be left out of the SBOM.',
)
