# Copyright 2025 meator
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

option(
  'adbwinapi_install_headers',
  type: 'boolean',
  value: true,
  description: 'Install header files.',
)

option(
  'adbwinapi_install_headers_subdir',
  type: 'string',
  value: 'AdbWinApi',
  description: 'Header file subdir into which header files are installed. Ignored if adbwinapi_install_headers is false. If empty, no subdir is used',
)

option(
  'adbwinapi_windows_version',
  type: 'string',
  value: '_WIN32_WINNT_WIN10',
  description: 'Version of Windows to compile for (used in _WIN32_WINNT and WINVER macros).',
)
