# Copyright 2025 meator
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

option(
  'adbwinapi_install_headers',
  type: 'boolean',
  value: true,
  description: 'Install header files.',
)

option(
  'adbwinapi_install_headers_subdir',
  type: 'string',
  value: 'AdbWinApi',
  description: 'Header file subdir into which header files are installed. Ignored if adbwinapi_install_headers is false. If empty, no subdir is used',
)

option(
  'adbwinapi_windows_version',
  type: 'string',
  value: '_WIN32_WINNT_WIN10',
  description: 'Version of Windows to compile for (used in _WIN32_WINNT and WINVER macros).',
)

option(
  'adbwinapi_generate_sbom',
  type: 'boolean',
  value: false,
  description: 'Generate Software Bill of Materials',
)

option(
  'adbwinapi_sbom_name',
  type: 'string',
  description: 'Name of the SBOM JSON file.',
)

option(
  'adbwinapi_sbom_dir',
  type: 'string',
  value: 'share/adbwinapi',
  description: 'Directory relative to prefix into which the sbom will be installed.',
)

option(
  'adbwinapi_github_runner_ver',
  type: 'string',
  description: 'The name of the GitHub runner used (including its version). Set this if you are building a SBOM inside a GitHub Action. If unset, this action will be left out of the SBOM.',
)

option(
  'adbwinapi_sbom_msvc_dev_cmd_ver',
  type: 'string',
  description: 'Version of ilammy/msvc-dev-cmd GitHub Action. Set this if you are building a SBOM inside a GitHub Action. If unset, this action will be left out of the SBOM.',
)

option(
  'adbwinapi_sbom_action_gh_release',
  type: 'string',
  description: 'Version of softprops/action-gh-release GitHub Action. Set this if you are building a SBOM inside a GitHub Action. If unset, this action will be left out of the SBOM.',
)
